<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.iflytek.integrated</groupId>
        <artifactId>integratedPlatform</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <groupId>com.iflytek.integrated.platform</groupId>
    <artifactId>platform</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>platform</name>
    <description>Demo project for Spring Boot</description>

    <properties>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.iflytek.medicalboot</groupId>
            <artifactId>starter</artifactId>
            <version>2.0.1-SNAPSHOT</version>
            <exclusions>
                <!-- 排除nacos -->
<!--                <exclusion>-->
<!--                    <groupId>com.alibaba.cloud</groupId>-->
<!--                    <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
<!--                </exclusion>-->
<!--                <exclusion>-->
<!--                    <groupId>com.alibaba.cloud</groupId>-->
<!--                    <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
<!--                </exclusion>-->
                <!-- 排除mybatisPlus-->
                <exclusion>
                    <groupId>com.baomidou</groupId>
                    <artifactId>mybatis-plus-boot-starter</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- 本项目特有依赖库 -->
        <!-- 使用queryDSL-->
        <dependency>
            <groupId>com.querydsl</groupId>
            <artifactId>querydsl-sql-spring</artifactId>
            <version>4.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>
        <!-- 汉字转拼音包-->
        <dependency>
            <groupId>com.belerweb</groupId>
            <artifactId>pinyin4j</artifactId>
            <version>2.5.1</version>
        </dependency>
        <!-- dom4j，xml包 -->
        <dependency>
            <groupId>dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpmime</artifactId>
            <version>4.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.3.2</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20180813</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--生成Entity和QueryDSL-->
            <plugin>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-maven-plugin</artifactId>
                <version>4.2.2</version>
                <configuration>
                    <jdbcDriver>com.mysql.jdbc.Driver</jdbcDriver>
                    <jdbcUrl>jdbc:mysql://172.31.184.170:4001/esb-plus</jdbcUrl>
                    <jdbcUser>root</jdbcUser>
                    <jdbcPassword>sM_xXZHPQAF1</jdbcPassword>
                    <!-- 创建实体，不写则创建全部 -->
                    <tableNamePattern>t_business_interface</tableNamePattern>
                    <customTypes>
                        com.querydsl.sql.types.UtilDateType
                    </customTypes>
                    <packageName>com.iflytek.integrated.platform.entity</packageName>
                    <exportBeans>true</exportBeans>
                    <beanInterfaces>java.io.Serializable</beanInterfaces>
                    <serializerClass>com.iflytek.medicalboot.core.querydsl.CoreMetaDataSerializer</serializerClass>
                    <beanSerializerClass>com.iflytek.medicalboot.core.querydsl.CoreBeanSerializer</beanSerializerClass>
                    <targetFolder>src/main/java</targetFolder>
                    <sourceFolder>src/main/java</sourceFolder>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.iflytek.medicalboot</groupId>
                        <artifactId>core</artifactId>
                        <version>${medicalboot.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>mysql</groupId>
                        <artifactId>mysql-connector-java</artifactId>
                        <version>5.1.45</version>
                    </dependency>
                    <!-- Swagger -->
                    <dependency>
                        <groupId>io.springfox</groupId>
                        <artifactId>springfox-swagger2</artifactId>
                        <version>2.9.2</version>
                    </dependency>
                    <dependency>
                        <groupId>io.springfox</groupId>
                        <artifactId>springfox-swagger-ui</artifactId>
                        <version>2.9.2</version>
                    </dependency>
                    <!-- Hutool -->
                    <dependency>
                        <groupId>cn.hutool</groupId>
                        <artifactId>hutool-all</artifactId>
                        <version>5.4.2</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

</project>
